dos/M2pztController/M2pzt.h

/* External inputs (root inport signals with default storage) */
typedef struct {
  real_T Reference[21];                /* '<Root>/Reference' */
  real_T Feedback[42];                 /* '<Root>/Feedback' */
} ExtU_M2pzt_T;
/* External outputs (root outports fed by signals with default storage) */
typedef struct {
  real_T Output[42];                   /* '<Root>/Output' */
} ExtY_M2pzt_T;
/* External inputs (root inport signals with default storage) */
extern ExtU_M2pzt_T M2pzt_U;
/* External outputs (root outports fed by signals with default storage) */
extern ExtY_M2pzt_T M2pzt_Y;
/* Model entry point functions */
extern void M2pzt_initialize(void);
extern void M2pzt_step(void);
extern void M2pzt_terminate(void);